--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <select id="genrePicker">
                 <option selected="true" disabled="true" >Genre</option>
                 <option value="Jazz">Jazz</option>
+                <option value="Pop">Pop</option>
                 <option value="Rock">Rock</option>
                 <option value="Metal">Metal</option>
                 <option value="Rap/RnB">Rap/RnB</option>
