--- a/index.html
+++ b/index.html
@@ -124,15 +124,26 @@
     </div>
 </body>
 
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('#submitButton').click(function(e) {
-            var sel = document.getElementById('genrePicker');
-            console.log(sel.value);
-            alert("You are now in queue for " + sel.value + " music. Please wait patiently!");
-            location.href = "chatClient.html";
-        });
-    });
-</script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#submitButton').click(function(e) {
+                var sel = document.getElementById('genrePicker');
 
+                if (sel.value != 'Genre') {
+                    uSessionID = null
+                    $.get("/join",{"genre":sel.value }).done(function(data) {
+                        if (data != null) {
+                            uSessionID = data;
+                        }
+                    })
+                    
+                    var url = "/sessionWait"
+                    url += "?genre=" + sel.value + "&uID=" + uSessionID;
+                    window.location = url;
+                } else {
+                    // Must select a genre
+                }
+            });
+        });
+    </script>
 </html>
