--- a/index.html
+++ b/index.html
@@ -16,17 +16,9 @@
         }
     </style>
 
-    <body background="https://cdn.shutterstock.com/shutterstock/videos/4004494/thumb/1.jpg?i10c=img.resize(height:72)" style="background-repeat: no-repeat; background-size: cover" ;>
+    <body background="http://localhost:3000/backgroundwater2.png" style="background-repeat: no-repeat; background-size: 100% 100%" ;>
         <div align="center" id="title">
-            <font size="24" color="blue">
-                <i>
-                SongSwap Recommendation App
-                </i>
-            </font>
-        </div>
-        <br>
-        <div align="center" id="image">
-            <img src="http://s0.hulkshare.com/avatar_images/original/1/3/7/137fa28774c1ec6cd0d82e0d8b2d2dbe.jpg?dd=1478526207" />
+            <img src="http://localhost:3000/banner2min.png" />
         </div>
         <br>
         <div align="center" id="genreSelector ">
@@ -50,17 +42,15 @@
             </select>
             <button id="submitButton" type="button" value="submit"> submit</button>
         </div>
+
     </body>
 
     <script type="text/javascript">
         $(document).ready(function() {
             $('#submitButton').click(function(e) {
                 var sel = document.getElementById('genrePicker');
-                if (sel.value != 'Genre') {
-                    var url = "/sessionWait"
-                    url += "?genre=" + sel.value
-                    window.location = url;
-                }
+                console.log(sel.value);
+                alert("You are now in queue for " + sel.value + " music. Please wait patiently!");
             });
         });
     </script>
