--- a/chatClient.html
+++ b/chatClient.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/additional-methods.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/Jquery-steps.css" rel="stylesheet">
+    <link href="http://localhost:3000/Jquery-steps.css" rel="stylesheet">
     <style>
         .interactionButtons {
             background-color: #2084ff;
